--- a/intro-flutter/firebase_app/web/index.html
+++ b/intro-flutter/firebase_app/web/index.html
@@ -35,4 +35,27 @@
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+
+<script src="main.dart.js" type="application/javascript"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+
+<!-- Firebase Configuration -->
+<script>
+  var firebaseConfig = {
+    apiKey: "...",
+    authDomain: "[YOUR_PROJECT].firebaseapp.com",
+    databaseURL: "https://[YOUR_PROJECT].firebaseio.com",
+    projectId: "[YOUR_PROJECT]",
+    storageBucket: "[YOUR_PROJECT].appspot.com",
+    messagingSenderId: "...",
+    appId: "1:...:web:...",
+    measurementId: "G-...",
+  };
+
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
 </html>
